<resources>
    <string name="app_name">Totaplayer</string>
    <string name="song_name_placeholder">Song name</string>
    <string name="negative_text">Cancel</string>
    <string name="positive_text">OK</string>
    <string name="language_choice_text">Choose your language:</string>
    <string name="about_the_app_text">About the app</string>
    <string name="about_info_text">- Tap to open the song detail and play it\n- Long tap to add it to favourites\n\nBlue background songs are in your favourites library, green ones aren\'t!</string>
    <string name="show_all">Show all</string>
    <string name="show_favourites">Show favourites</string>
    <string name="change_language">Change language</string>
    <string name="about">About</string>
    <string-array name="languages">
        <item>English US</item>
        <item>English UK</item>
        <item>German</item>
        <item>Spanish ES</item>
        <item>Spanish MX</item>
        <item>French FR</item>
        <item>French CA</item>
        <item>Italian</item>
        <item>Dutch</item>
        <item>Simplified Chinese</item>
        <item>Traditional Chinese</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Russian</item>
    </string-array>
</resources>